--- a/style.css
+++ b/style.css
@@ -2,176 +2,50 @@
     margin: 0;
     padding: 0;
 }
-
-.container {
-    height: 100vh;
+.Container{
     width: 100%;
-    background: linear-gradient(rgba(0, 0, 0, .6), rgba(0, 0, 0, 0.8)), url(IMG/bg.jpg) no-repeat;
-    background-size: cover;
+    height: 100vh ;
 }
-
-.viewport {
-    width: 42vw;
-    height: 21vw;
+.Circle1{
+    width: 70vh;
+    height: 70vh;
+    border-radius: 50%;
+    border: solid 2px blue;
     left: 50%;
     position: absolute;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    perspective: 1300px;
+    transform: translate(-50%) rotate(0deg);
+    animation: Spin 5s linear infinite;
 }
-.viewport:after{
-    content: "";
+.Circle2{
+    width: 40vh;
+    height: 40vh;
+
+    border-radius: 50%;
+    border: solid 2px blue;
+    left: 30%;
     position: absolute;
-    width: 120%;
-    height: 20%;
-    background-color: black;
-    z-index: -1;
-    top: 140%;
-    left: -10%;
-    filter: blur(40px);
+    transform: translate(0%) rotate(0deg);
+    animation: Spin 2s linear infinite;
 }
-
-
-.cube {
-    width: 100%;
-    height: 33.33333333333%;
-    transform-style: preserve-3d;
-    position: relative;
-}
-.cube-1{
-    transition: transform .4s;
-}
-
-
-.cube-2 {
-    z-index: 10;
-    transition: transform .4s .2s;
-}
-
-.cube-3{
-    transition: transform .4s .4s;
-}
-.face {
-    width: 100%;
-    height: 100%;;
+.Circle3{
+    width: 20vh;
+    height: 20vh;
+    background-color: red;
+    border-radius: 50%;
+    border: solid 2px blue;
+    left: -20%;
     position: absolute;
 
 }
+@keyframes Spin {
+    from {
+        transform: translate(-50%) rotate(1deg);
 
-.front {
-    transform: translateZ(21vw);
-}
+       
+      }
+      to {
+        transform: translate(-50%) rotate(359deg);    
 
-.cube-1 .front {
-    background: url(IMG/slide-img-1.jpg) no-repeat 50% 0;
-    background-size: cover;
-}
 
-.cube-2 .front {
-    background: url(IMG/slide-img-1.jpg) no-repeat 50% -7vw;
-    background-size: cover;
-}
-
-.cube-3 .front {
-    background: url(IMG/slide-img-1.jpg) no-repeat 50% -14vw;
-    background-size: cover;
-}
-
-.back {
-    transform: translateZ(-21vw) rotateY(180deg);
-}
-.cube-1 .back {
-    background: url(IMG/slide-img-2.jpg) no-repeat 50% 0;
-    background-size: cover;
-}
-
-.cube-2 .back {
-    background: url(IMG/slide-img-2.jpg) no-repeat 50% -7vw;
-    background-size: cover;
-}
-
-.cube-3 .back {
-    background: url(IMG/slide-img-2.jpg) no-repeat 50% -14vw;
-    background-size: cover;
-}
-.right {
-    transform: translateX(21vw) rotateY(90deg);
-}
-.cube-1 .right {
-    background: url(IMG/slide-img-4.jpg) no-repeat 50% 0;
-    background-size: cover;
-}
-
-.cube-2 .right {
-    background: url(IMG/slide-img-4.jpg) no-repeat 50% -7vw;
-    background-size: cover;
-}
-
-.cube-3 .right {
-    background: url(IMG/slide-img-4.jpg) no-repeat 50% -14vw;
-    background-size: cover;
-}
-.left {
-    transform: translateX(-21vw) rotateY(-90deg);
-}
-.cube-1 .left {
-    background: url(IMG/slide-img-3.jpg) no-repeat 50% 0;
-    background-size: cover;
-}
-
-.cube-2 .left {
-    background: url(IMG/slide-img-3.jpg) no-repeat 50% -7vw;
-    background-size: cover;
-}
-
-.cube-3 .left {
-    background: url(IMG/slide-img-3.jpg) no-repeat 50% -14vw;
-    background-size: cover;
-}
-
-.top {
-    height: 42vw;
-    transform: translateY(-21vw) rotateX(90deg);
-    background-color: #111;
-}
-
-.bottom {
-    height: 42vw;
-    transform: translateY(-14vw) rotateX(-90deg);
-    background-color: #111;
-}
-.control{
-    z-index: 100;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    width: 40px;
-    height: 40px;
-    border: solid white 1px;
-    background-color: rgba(59,52,50,.7);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    border-radius: 100%;
-    cursor: pointer;
-    transition: background-color .3s;
-}
-.control i {
-    pointer-events: none;
-}
-
-.control:hover{
-    background-color: rgba(42, 38, 36, .8);
-}
-.left-arrow{
-    top: 50%;
-    left: -35%;
-}
-.right-arrow{
-    top: 50%;
-    left: 135%;
-}
-.play-pause{
-    top: 140%;
-    left: 120%;
+      }
 }
